change homa page banner image

--- a/index.html
+++ b/index.html
@@ -259,9 +259,10 @@
 
     <main>
         <!-- hero section -->
-        <section class="hero-section pt-10">
+        <section class="hero-section pt-24 pb-32">
+          
             <div class="md:flex justify-center items-center backdrop-blur-sm">
-                <div class="flex flex-col gap-5 items-center text-center">
+                <div class="flex flex-col gap-5 items-center text-center mt-16 mb-10">
                     <h1 class="md:text-4xl text-2xl font-bold text-white md:pt-20">Exhibition Stand Builder in Europe
                     </h1>
                     <p class="md:text-xl text-white">Stand Design, You Know You Want It</p>
@@ -867,32 +868,32 @@
 
                 </div>
                 <div class="grid md:grid-cols-3 gap-3 mb-5 p-10">
-                    <div class="overflow-hidden  hover:bg-sky-700 boxes ">
+                    <div class="overflow-hidden border border-blue-600 rounded-2xl p-5  hover:bg-sky-700 boxes ">
                         <img src="assets/images/portfolio/one.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden">
+                    <div class="overflow-hidden border border-blue-600 rounded-2xl p-5  hover:bg-sky-700 boxes">
                         <img src="assets/images/portfolio/two.webp" alt="portfolio-img-2" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden">
+                    <div class="overflow-hidden border border-blue-600 rounded-2xl p-5  hover:bg-sky-700 boxes">
                         <img src="assets/images/portfolio/three.webp" alt="portfolio-img-3" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden">
+                    <div class="overflow-hidden border border-blue-600 rounded-2xl p-5  hover:bg-sky-700 boxes">
                         <img src="assets/images/portfolio/four.webp" alt="portfolio-img-4" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden">
+                    <div class="overflow-hidden border border-blue-600 rounded-2xl p-5  hover:bg-sky-700 boxes">
                         <img src="assets/images/portfolio/five.webp" alt="portfolio-img-5" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden">
+                    <div class="overflow-hidden border border-blue-600 rounded-2xl p-5  hover:bg-sky-700 boxes">
                         <img src="assets/images/portfolio/six.webp" alt="portfolio-img-6" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
