--- a/stand-design-and-booth-construction-company/dusseldorf/index.html
+++ b/stand-design-and-booth-construction-company/dusseldorf/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/images/logos/fevicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="/assets/images/logos/fevicon-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="/assets/images/logos/fevicon-192x192.png" />
     <title>Exhibition Stand Designer, Builder &amp; Contractor in Dusseldorl</title>
     <meta name="description"
         content="Stand Constructions is an exhibition stand design company in Dusseldorf that has been serving exhibitors for years." />
@@ -53,7 +56,7 @@
         <div class="flex justify-around">
             <input type="checkbox" name="check" id="check">
             <div class="flex items-center">
-                <img src="assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12"
+                <img src="/assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12"
                     loading="eager">
             </div>
 
@@ -646,7 +649,6 @@
         </section>
 
 
-
         <section class="contact_us">
             <div class="px-[3%]">
                 <div>
@@ -658,7 +660,7 @@
 
                     </div>
 
-                    <div class=" relative w-full min-h-screen p-3 bg-white  mt-20
+                    <div class=" relative w-full  p-3 bg-white  mt-20
             flex justify-center">
                         <span class="big-circle"></span>
                         <img src="img/shape.png" class="square" alt="" />
@@ -670,10 +672,8 @@
                                     specifications.
                                 </p>
 
-                                <div class="info">
-                                    <!-- <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d314920.7878434826!2d17.320758!3d51.928141!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47051778bd50658d%3A0x364c8487ecaf1e9b!2sPor%C4%99ba%2013A%2C%2063-233%20Por%C4%99ba%2C%20Poland!5e0!3m2!1sen!2sus!4v1720597334742!5m2!1sen!2sus"
-                                class="w-48 h-auto"></iframe> -->
+                                <div class="map_info">
+                                   
                                 </div>
 
                                 <div class="social-media">
@@ -700,17 +700,17 @@
                                 <span class="circle two"></span>
 
 
-                                <form action="index.html" autocomplete="off">
+                                <form action="index.html" autocomplete="off" id="contactForm2">
                                     <h3 class="title">Send Us a Message</h3>
 
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
-                                            <input type="text" name="name" class="input" />
+                                            <input type="text" name="contact_name" class="input" />
                                             <label for="">Contact Name</label>
                                             <span>Contact Name</span>
                                         </div>
                                         <div class="input-container">
-                                            <input type="text" name="name" class="input" />
+                                            <input type="text" name="company_name" class="input" />
                                             <label for="">Company Name</label>
                                             <span>Company Name</span>
                                         </div>
@@ -720,12 +720,12 @@
                                             <span>Email</span>
                                         </div>
                                         <div class="input-container">
-                                            <input type="text" name="exhibition-name" class="input" />
+                                            <input type="text" name="exhibition_name" class="input" />
                                             <label for="">Exhibition Name</label>
                                             <span>Exhibition Name</span>
                                         </div>
                                         <div class="input-container">
-                                            <input type="email" name="booth-size" class="input" />
+                                            <input type="text" name="booth_size" class="input" />
                                             <label for="">Booth Size</label>
                                             <span>Booth Size</span>
                                         </div>
@@ -737,8 +737,8 @@
 
                                     </div>
                                     <br>
-                                    <input type="file" name="file" required="required" aria-required="true"
-                                        multiple="multiple">
+                                    <input type="file" name="attachment" accept="image/*" required="required"
+                                        aria-required="true" multiple />
                                     <br>
                                     <br>
                                     <div class="input-container textarea">
@@ -746,7 +746,7 @@
                                         <label for="">Message</label>
                                         <span>Message</span>
                                     </div>
-                                    <input type="submit" value="Send" class="btn" />
+                                    <button type="submit" class="btn">submit</button>
                                 </form>
                             </div>
                         </div>
@@ -756,31 +756,30 @@
 
 
 
+
     </main>
 
     <!-- Footer -->
-    <footer class="bg-[#000A93] px-[5%] text-white">
+    <footer class="bg-[#000A93] px-[5%] text-white ">
         <div class="grid md:grid-cols-12 mt-5 py-10 gap-5">
             <div class="col-span-3 flex flex-col gap-3">
-                <img src="../../assets/images/logos/footer-logo.webp" class="w-40" />
+                <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
                 <div>
                     <p class="text-sm">
-                        Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with
-                        equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions,
-                        custom and unique stands are created by our talented graphic designers, who carry your brand to
-                        world standards with years of knowledge and experience.
+                        Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
+                        who carry your brand to world standards with years of knowledge and experience.
                     </p>
                 </div>
             </div>
             <div class="col-span-2">
                 <h4 class="text-2xl font-bold mb-2">Quick Links</h4>
                 <ul class="flex flex-col list-none gap-1">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Process</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="https://www.standconstructions.com/">Home</a></li>
+                    <li><a href="https://www.standconstructions.com/about-us/">About Us</a></li>
+                    <li><a href="https://www.standconstructions.com/#process">Process</a></li>
+                    <li><a href="https://www.standconstructions.com/#portfolio">Portfolio</a></li>
+                    <li><a href="https://www.standconstructions.com/blogs/">Blog</a></li>
+                    <li><a href="https://www.standconstructions.com/#contact">Contact Us</a></li>
                 </ul>
             </div>
             <div class="col-span-2">
@@ -798,11 +797,11 @@
                 <div>
                     <h4 class="text-2xl font-bold mb-2">Major Countries</h4>
                     <ul class="flex flex-col gap-2 list-none">
-                        <li><a href="#">Stand Builder In Germany</a></li>
-                        <li><a href="#">Stand Builder In UK</a></li>
-                        <li><a href="#">Stand Builder In Spain</a></li>
-                        <li><a href="#">Stand Builder In Netherlands</a></li>
-                        <li><a href="#">Stand Builder In Italy</a></li>
+                        <li><a href="https://www.standconstructions.com/exhibition-stand-builder/germany/">Stand Builder In Germany</a></li>
+                        <li><a href="https://www.standconstructions.com/exhibition-stand-builder/uk/">Stand Builder In UK</a></li>
+                        <li><a href="https://www.standconstructions.com/exhibition-stand-builder/spain/">Stand Builder In Spain</a></li>
+                        <li><a href="https://www.standconstructions.com/exhibition-stand-builder/netherlands/">Stand Builder In Netherlands</a></li>
+                        <li><a href="https://www.standconstructions.com/exhibition-stand-builder/italy/">Stand Builder In Italy</a></li>
                     </ul>
                 </div>
             </div>
@@ -842,12 +841,12 @@
             </div>
         </div>
     </footer>
+
     <div class="bg-black text-center py-3">
         <p class="text-gray-400">Copyright © 2024 Stand Constructions by <a href="https://digitalfyx.com/"
                 class="text-white text-bold">Digitalfyx</a>. All Rights Reserved.</p>
     </div>
     <!-- /Footer-->
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../../assets/js/script.js"></script>
 </body>
