--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                         class="w-96 border border-blue-400 p-5 rounded-2xl  bg-slate-50  md:absolute top-5  mb-5">
                                     <img src="../assets/images/exhibition_images/exhibition-3.jpg" alt="about_image"
                                         loading="lazy"
-                                        class="md:absolute bg-slate-50 border rounded-2xl border-blue-400 p-5 top-[9rem] left-44 mb-5">
+                                        class="md:absolute bg-slate-50 border rounded-2xl border-blue-400 p-5 top-[9rem] left-44 mb-5 md:w-60 w-full    ">
                                 </div>
 
                             </div>
@@ -324,7 +324,7 @@
 
                     </div>
                     <div>
-                        <div class="grid md:grid-cols-3 gap-5 mt-10">
+                        <div class="grid md:grid-cols-3 gap-5 md:mt-20 mt-44">
                             <div
                                 class="shadow p-4 bg-white flex flex-col justify-center items-center rounded-lg pb-10 border-b-4 border-[#0076F9]">
                                 <div class="flex mb-3 bg-[#0076F9] w-28 h-28 justify-center items-center rounded-full">
