add form submition code in js

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -592,7 +592,7 @@
                     <div class=" relative w-full  p-3 bg-white  mt-20
             flex justify-center">
                         <span class="big-circle"></span>
-                        <img src="img/shape.png" class="square" alt="" />
+                        <!-- <img src="img/shape.png" class="square" alt="" /> -->
                         <div class="form">
                             <div class="contact-info">
                                 <h3 class="title">LET US KNOW ABOUT YOUR REQUIREMENTS</h3>
@@ -634,7 +634,7 @@
 
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
-                                            <input type="text" name="contact_name" class="input" />
+                                            <input type="text" name="fullname" class="input" />
                                             <label for="">Contact Name</label>
                                             <span>Contact Name</span>
                                         </div>
@@ -654,7 +654,7 @@
                                             <span>Exhibition Name</span>
                                         </div>
                                         <div class="input-container">
-                                            <input type="text" name="booth_size" class="input" />
+                                            <input type="text" name="boothSize" class="input" />
                                             <label for="">Booth Size</label>
                                             <span>Booth Size</span>
                                         </div>
