--- a/index.html
+++ b/index.html
@@ -976,12 +976,12 @@
                         <span class="circle one"></span>
                         <span class="circle two"></span>
 
-                        <form id="contactForm" action="index.html" autocomplete="off">
+                        <form id="contactForm" autocomplete="off">
                             <h3 class="title">Send Us a Message</h3>
                             <div class="input-container">
                                 <input type="text" name="name" class="input" />
-                                <label for="">Username</label>
-                                <span>Username</span>
+                                <label for="">Full Name</label>
+                                <span>Full Name</span>
                             </div>
                             <div class="input-container">
                                 <input type="email" name="email" class="input" />
@@ -1146,7 +1146,8 @@
     </div>
 
     <!-- main script -->
-<script src="../assets/js/script.js"></script>
+     
+<script src="assets/js/script.js" defer></script>
     <!-- /end main script-->
 </body>
 
