add missign alt tag and also add canonical to blog page

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blogs | Stand Construction</title>
+    <link rel="canonical" href="https://www.standconstructions.com/blogs/" />
     <meta name="google-site-verification" content="CwhivjcN1He5lYhGvIiRKF4t5LleNnyi8B6cfnGYxXM" />
     <!-- /SEO tags -->
     <link rel="stylesheet" href="./../assets/css/tailwind.css">
@@ -192,7 +193,7 @@
     <footer class="bg-[#000A93] px-[5%] text-white">
         <div class="grid md:grid-cols-12 mt-5 py-10 gap-5">
             <div class="col-span-3 flex flex-col gap-3">
-                <img src="../assets/images/logos/footer-logo.webp" class="w-40" />
+                <img src="../assets/images/logos/footer-logo.webp" alt="footer-logo" class="w-40" />
                 <div>
                     <p class="text-sm">
                         Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with
