--- a/exhibition-stand-builder/uk/index.html
+++ b/exhibition-stand-builder/uk/index.html
@@ -738,7 +738,7 @@
             </button>
         </div>
     </div>
-
+    <script src="../../assets/js/script.js" defer></script>
 </body>
 
 </html>
